rollouts dashboard logs
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/argo-rollouts/templates/dashboard/deployment.yaml
+++ b/charts/argo-rollouts/templates/dashboard/deployment.yaml
@@ -46,8 +46,8 @@ spec:
         imagePullPolicy: {{ .Values.dashboard.image.pullPolicy }}
         args:
         - dashboard
-        - "--loglevel={{ .Values.controller.logging.level }}"
-        - "--kloglevel={{ .Values.controller.logging.kloglevel }}"
+        - "--loglevel={{ .Values.dashboard.logging.level }}"
+        - "--kloglevel={{ .Values.dashboard.logging.kloglevel }}"
         {{- with .Values.dashboard.extraArgs }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
