add changelog notes
Signed-off-by: Jesse Bye <8467862+jessebye@users.noreply.github.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -28,3 +28,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: Upgrade Argo CD to v2.9.3
+    - kind: changed
+      description: Resolve mismatch between ServiceMonitor labels and controller
