--- a/charts/argocd-image-updater/templates/deployment.yaml
+++ b/charts/argocd-image-updater/templates/deployment.yaml
@@ -45,31 +45,31 @@ spec:
             valueFrom:
               configMapKeyRef:
                 key: applications_api
-                name: argocd-image-updater-config
+                name: {{ .Values.configName }}
                 optional: true
           - name: ARGOCD_GRPC_WEB
             valueFrom:
               configMapKeyRef:
                 key: argocd.grpc_web
-                name: argocd-image-updater-config
+                name: {{ .Values.configName }}
                 optional: true
           - name: ARGOCD_SERVER
             valueFrom:
               configMapKeyRef:
                 key: argocd.server_addr
-                name: argocd-image-updater-config
+                name: {{ .Values.configName }}
                 optional: true
           - name: ARGOCD_INSECURE
             valueFrom:
               configMapKeyRef:
                 key: argocd.insecure
-                name: argocd-image-updater-config
+                name: {{ .Values.configName }}
                 optional: true
           - name: ARGOCD_PLAINTEXT
             valueFrom:
               configMapKeyRef:
                 key: argocd.plaintext
-                name: argocd-image-updater-config
+                name: {{ .Values.configName }}
                 optional: true
           - name: ARGOCD_TOKEN
             valueFrom:
@@ -81,25 +81,25 @@ spec:
             valueFrom:
               configMapKeyRef:
                 key: log.level
-                name: argocd-image-updater-config
+                name: {{ .Values.configName }}
                 optional: true
           - name: GIT_COMMIT_USER
             valueFrom:
               configMapKeyRef:
                 key: git.user
-                name: argocd-image-updater-config
+                name: {{ .Values.configName }}
                 optional: true
           - name: GIT_COMMIT_EMAIL
             valueFrom:
               configMapKeyRef:
                 key: git.email
-                name: argocd-image-updater-config
+                name: {{ .Values.configName }}
                 optional: true
           - name: IMAGE_UPDATER_KUBE_EVENTS
             valueFrom:
               configMapKeyRef:
                 key: kube.events
-                name: argocd-image-updater-config
+                name: {{ .Values.configName }}
                 optional: true
           {{- with .Values.extraEnv }}
             {{- toYaml . | nindent 10 }}
@@ -152,7 +152,7 @@ spec:
             path: registries.conf
           - key: git.commit-message-template
             path: commit.template
-          name: argocd-image-updater-config
+          name: {{ .Values.configName }}
           optional: true
         name: image-updater-conf
       {{- if .Values.authScripts.enabled }}
@@ -168,7 +168,7 @@ spec:
           optional: true
         name: ssh-known-hosts
       - configMap:
-          name: argocd-image-updater-ssh-config
+          name: {{ .Values.sshConfigName }}
           optional: true
         name: ssh-config
       {{- with .Values.volumes }}
