--- a/charts/argocd-image-updater/templates/configmap.yaml
+++ b/charts/argocd-image-updater/templates/configmap.yaml
@@ -4,7 +4,7 @@ kind: ConfigMap
 metadata:
   labels:
     {{- include "argocd-image-updater.labels" . | nindent 4 }}
-  name: argocd-image-updater-config
+  name: {{ .Values.configName }}
   namespace: {{ .Release.Namespace | quote }}
 data:
   {{- with .Values.config.applicationsAPIKind }}
