--- a/charts/argocd-image-updater/templates/configmap-sshconfig.yaml
+++ b/charts/argocd-image-updater/templates/configmap-sshconfig.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   labels:
     {{- include "argocd-image-updater.labels" . | nindent 4 }}
-  name: argocd-image-updater-ssh-config
+  name: {{ .Values.sshConfigName }}
   namespace: {{ .Release.Namespace | quote }}
 data:
   {{- with .Values.config.sshConfig }}
