--- a/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
@@ -145,7 +145,7 @@ data:
       rbac:
         enabled: {{ .Values.server.sso.rbac.enabled }}
       {{- with .Values.server.sso.scopes }}
-      scopes: {{ toYaml . | nindent 8 }}
+      scopes: {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.server.sso.issuerAlias }}
       issuerAlias: {{ toYaml . }}
@@ -163,7 +163,7 @@ data:
       insecureSkipVerify: {{ toYaml . }}
       {{- end }}
       {{- with .Values.server.sso.filterGroupsRegex }}
-      filterGroupsRegex: {{ toYaml . | nindent 8 }}
+      filterGroupsRegex: {{- toYaml . | nindent 8 }}
       {{- end }}
     {{- end }}
     {{- with .Values.controller.workflowRestrictions }}
