fix(argo-cd): Fix ingressGrpc extraTls
Signed-off-by: Matthias Baur <m.baur@syseleven.de>

--- a/charts/argo-cd/templates/argocd-server/ingress-grpc.yaml
+++ b/charts/argo-cd/templates/argocd-server/ingress-grpc.yaml
@@ -58,7 +58,7 @@ spec:
       - {{ $hostname }}
       secretName: {{ printf "%s-tls" $hostname }}
     {{- end }}
-    {{- with .Values.server.ingressGrpc.tls }}
+    {{- with .Values.server.ingressGrpc.extraTls }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
   {{- end }}
