fix(argo-cd): Add default value for the applicationSet webhook ingress boolean
Signed-off-by: Marcus Young <myoung34@my.apsu.edu>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -2555,6 +2555,12 @@ applicationSet:
     ## Has higher precedence over `applicationSet.pdb.minAvailable`
     maxUnavailable: ""
 
+  ## -- ApplicationSet webhook configuration
+  webhook:
+    # -- Ingress configuration for the webhook
+    ingress:
+      # -- Enable ApplicationSet webhook ingress
+      enabled: false
   ## ApplicationSet controller image
   image:
     # -- Repository to use for the ApplicationSet controller
