chore(argo-cd): update artifacthub.io/changes for 6.0.4
Signed-off-by: Sjouke de Vries <info@sdvservices.nl>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: fixed
-      description: Fixed rendering of network policy when applicationset webhook is enabled
+      description: Also added extraHosts defined to the TLS hostnames
