fix(argo-cd): Restart repo server on known-hosts configmap change
Fixes ArgoCD Repo Server does not restart when `argocd-ssh-known-hosts-cm` changes #2493

Signed-off-by: Lukas Jost <lukas.jost@outlook.com>

--- a/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
@@ -36,6 +36,7 @@ spec:
         {{- if .Values.configs.cmp.create }}
         checksum/cmp-cm: {{ include (print $.Template.BasePath "/argocd-configs/argocd-cmp-cm.yaml") . | sha256sum }}
         {{- end }}
+        checksum/known-hosts-cm: {{ include (print $.Template.BasePath "/argocd-configs/argocd-ssh-known-hosts-cm.yaml") . | sha256sum }}
         {{- with (mergeOverwrite (deepCopy .Values.global.podAnnotations) .Values.repoServer.podAnnotations) }}
         {{- range $key, $value := . }}
         {{ $key }}: {{ $value | quote }}
