--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -2451,7 +2451,7 @@ repoServer:
     # -- Repo server service port
     port: 8081
     # -- Repo server service port name
-    portName: https-repo-server
+    portName: tcp-repo-server
 
   ## Repo server metrics service configuration
   metrics:
@@ -2653,7 +2653,7 @@ applicationSet:
     # -- ApplicationSet service port
     port: 7000
     # -- ApplicationSet service port name
-    portName: webhook
+    portName: http-webhook
 
   serviceAccount:
     # -- Create ApplicationSet controller service account
